<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_add_photo"
        android:layout_width="match_parent"
        android:layout_height="208dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        app:cardCornerRadius="10dp"
        android:elevation="10dp"
        app:strokeColor="@color/grey"
        app:strokeWidth="2dp">

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/ic_add_a_photo"
            android:layout_gravity="center"/>

        <ImageView
            android:id="@+id/iv_story"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"/>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_camera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="@string/open_camera"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@id/btn_gallery"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_add_photo"
        app:layout_constraintVertical_bias="0.034"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_gallery"
        android:layout_width="0dp"
        app:layout_constraintTop_toTopOf="@id/btn_camera"
        app:layout_constraintStart_toEndOf="@id/btn_camera"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/open_gallery"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:hint="@string/desc_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/TextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputEditText"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ButtonOrange"
        android:text="@string/add_story"
        app:layout_constraintBottom_toBottomOf="parent"
        android:enabled="true"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:foregroundGravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Share Location"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/til_description"
        app:layout_constraintStart_toStartOf="@id/til_description"
        app:layout_constraintTop_toBottomOf="@id/til_description"/>

</androidx.constraintlayout.widget.ConstraintLayout>